fix(mobile navbar): updated test, component, styling of navbar to better handle UX on mobile screens

--- a/styles/_Navbar.sass
+++ b/styles/_Navbar.sass
@@ -1,5 +1,3 @@
-$navbar-main-bg-color: #e9f2f4
-
 .navbar
   //  1.  Layout
   @apply sticky top-0
@@ -11,7 +9,7 @@ $navbar-main-bg-color: #e9f2f4
   @apply w-full
   //  5.  Typography
   //  6.  Backgrounds
-  background-color: $navbar-main-bg-color
+  @apply bg-slate-800
   //  7.  Borders
   //  8.  Effects
   //  9.  Filters
@@ -21,7 +19,7 @@ $navbar-main-bg-color: #e9f2f4
   //  13. Interactivity
   //  14. SVG
   //  15. Accessibility
-  
+
 .navbar__content
   //  1.  Layout
   // @apply container
@@ -60,16 +58,16 @@ $navbar-main-bg-color: #e9f2f4
   //  14. SVG
   //  15. Accessibility
 
-.navbar__profile-picture
+.navbar__container--right
   //  1.  Layout
+  @apply hidden
   //  2.  Flexbox & Grid
+  @apply md:flex items-center
   //  3.  Spacing
   //  4.  Sizing
-  @apply h-[50px]
   //  5.  Typography
   //  6.  Backgrounds
   //  7.  Borders
-  @apply rounded-full
   //  8.  Effects
   //  9.  Filters
   //  10. Tables
@@ -85,7 +83,7 @@ $navbar-main-bg-color: #e9f2f4
   //  3.  Spacing
   //  4.  Sizing
   //  5.  Typography
-  @apply text-xl
+  @apply text-xl text-white
   //  6.  Backgrounds
   //  7.  Borders
   //  8.  Effects
@@ -101,14 +99,77 @@ $navbar-main-bg-color: #e9f2f4
   //  1.  Layout
   //  2.  Flexbox & Grid
   //  3.  Spacing
-  @apply px-3 py-2
+  @apply px-3
   //  4.  Sizing
   //  5.  Typography
-  @apply text-gray-800
+  @apply text-white
   //  6.  Backgrounds
-  @apply hover:bg-gray-300
+  @apply hover:bg-slate-700
   //  7.  Borders
-  @apply border-2
+  @apply border
+  //  8.  Effects
+  //  9.  Filters
+  //  10. Tables
+  //  11. Transitions & Animation
+  //  12. Transforms
+  //  13. Interactivity
+  //  14. SVG
+  //  15. Accessibility
+
+.navbar__container--right-mobile
+  //  1.  Layout
+  @apply flex md:hidden
+  //  2.  Flexbox & Grid
+  @apply items-center justify-center
+  //  3.  Spacing
+  //  4.  Sizing
+  //  5.  Typography
+  //  6.  Backgrounds
+  //  7.  Borders
+  //  8.  Effects
+  //  9.  Filters
+  //  10. Tables
+  //  11. Transitions & Animation
+  //  12. Transforms
+  //  13. Interactivity
+  //  14. SVG
+  //  15. Accessibility
+
+.navbar__dropdown
+  //  1.  Layout
+  @apply flex md:hidden fixed top-[44px] left-0
+  //  2.  Flexbox & Grid
+  @apply flex-col items-start
+  //  3.  Spacing
+  @apply space-y-1 p-1
+  //  4.  Sizing
+  @apply w-full
+  //  5.  Typography
+  //  6.  Backgrounds
+  @apply bg-slate-800
+  //  7.  Borders
+  //  8.  Effects
+  //  9.  Filters
+  //  10. Tables
+  //  11. Transitions & Animation
+  //  12. Transforms
+  //  13. Interactivity
+  //  14. SVG
+  //  15. Accessibility
+
+.navbar__dropdown-item
+  //  1.  Layout
+  //  2.  Flexbox & Grid
+  @apply flex justify-center items-center
+  //  3.  Spacing
+  @apply py-1 px-2
+  //  4.  Sizing
+  @apply w-full
+  //  5.  Typography
+  @apply text-white
+  //  6.  Backgrounds
+  @apply hover:bg-slate-400
+  //  7.  Borders
   //  8.  Effects
   //  9.  Filters
   //  10. Tables
